@@ -3450,54 +3450,69 @@ SCIP_RETCODE SCIPdigraphAddEdgeSafe(
 
 /** returns the number of edges originating at the given node */
 extern
-int SCIPdigraphGetNOutgoingEdges(
+int SCIPdigraphGetNOutEdges(
    SCIP_DIGRAPH*         digraph,            /**< directed graph */
    int                   node                /**< node for which the number of outgoing edges is returned */
    );
 
 /** returns the array of edges originating at the given node; this array must not be changed from outside */
 extern
-int* SCIPdigraphGetOutgoingEdges(
+int* SCIPdigraphGetOutEdges(
    SCIP_DIGRAPH*         digraph,            /**< directed graph */
    int                   node                /**< node for which the array of outgoing edges is returned */
    );
 
-/** compute components on the given directed graph
+/** Compute undirected connected components on the given graph.
  *
- *  @note The graph should be the directed representation of an undirected
- *        graph, i.e., for each edge, its reverse should exist.
+ *  @note For each edge, its reverse is added, so the graph does not need
+ *        to be the directed representation of an undirected graph.
  */
 extern
-SCIP_RETCODE SCIPdigraphComputeComponents(
+SCIP_RETCODE SCIPdigraphComputeUndirectedComponents(
    SCIP_DIGRAPH*         digraph,            /**< directed graph */
+   int                   minsize,            /**< all components with less nodes are ignored */
    int*                  components,         /**< array with as many slots as there are nodes in the directed graph
                                               *   to store for each node the component to which it belongs
-                                              *   (components are numbered 1 to ncomponents) */
-   int*                  ncomponents         /**< pointer to store the number of components */
+                                              *   (components are numbered 0 to ncomponents - 1); or NULL, if components
+                                              *   are accessed one-by-one using SCIPdigraphGetComponent() */
+   int*                  ncomponents         /**< pointer to store the number of components; or NULL, if the
+                                              *   number of components is accessed by SCIPdigraphGetNComponents() */
    );
 
-/** Computes (undirected) components on the directed graph and sorts
- *  the components (almost) topologically w.r.t. the directed graph.
+/** Performes an (almost) topological sort on the undirected components of the directed graph.
+ *  The undirected components should be computed before using SCIPdigraphComputeUndirectedComponents().
  *
  *  Note, that in general a topological sort is not unique.
  *  Note, that there might be directed cycles, that are randomly broken,
  *  which is the reason for having only almost topologically sorted arrays.
  */
 extern
-SCIP_RETCODE SCIPdigraphComputeTopoSortedComponents(
-   SCIP_DIGRAPH*         digraph,            /**< directed graph */
-   int                   minsize,            /**< minimum size a component should have */
-   int*                  components,         /**< array with as many slots as there are nodes in the directed graph
-                                              *   to store the nodes of the components one component after the other,
-                                              *   with the nodes of one component being (almost) topologically sorted */
-   int*                  componentstart,     /**< array to store for each component, where it starts in array components;
-                                              *   at position ncomponents+1, the total number of nodes is stored */
-   int                   componentstartsize, /**< size of componentstart array, if this is smaller than the number of components+1,
-                                              *   only the start indices of the first components are stored and the method should
-                                              *   be called again after reallocating the componentstart array */
-   int*                  ncomponents         /**< pointer to store the number of components */
+SCIP_RETCODE SCIPdigraphTopoSortComponents(
+   SCIP_DIGRAPH*         digraph             /**< directed graph */
    );
 
+/** returns the number of previously computed undirected components for the given directed graph */
+extern
+int SCIPdigraphGetNComponents(
+   SCIP_DIGRAPH*         digraph             /**< directed graph */
+   );
+
+/** Returns the number of previously computed undirected components for the given directed graph.
+ *  If the components were sorted using SCIPdigraphTopoSortComponents(), the component is (almost) topologically sorted.
+ */
+extern
+void SCIPdigraphGetComponent(
+   SCIP_DIGRAPH*         digraph,            /**< directed graph */
+   int                   compidx,            /**< number of the component to return */
+   int**                 nodes,              /**< pointer to store the nodes in the component */
+   int*                  nnodes              /**< pointer to store the number of nodes in the component */
+   );
+
+/** frees the component information for the given directed graph */
+extern
+void SCIPdigraphFreeComponents(
+   SCIP_DIGRAPH*         digraph             /**< directed graph */
+   );
 
 /*
  * Numerical methods
